tup/parse/testdata/error/input/assignments.tup
# missing right-hand side
answer =

# unclosed labeled destructuring
(name, age = (name: "Brent", age: 42)

# missing expression after mut
coords = mut
